Fix header/footer to always be visible

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,5 +1,8 @@
 .main-container {
   text-align: center;
   height: 100vh;
+  overflow-y: scroll;
+  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
 }
 
