--- a/src/Components/FindMe/FindMe.css
+++ b/src/Components/FindMe/FindMe.css
@@ -1,5 +1,11 @@
 .footer-container {
+    align-items: center;
+    background-color: gray;
     border: 2px solid green;
     display: flex;
+    height: 2rem;
     justify-content: space-around;
+    position: sticky;
+    bottom: 0;
+    z-index: 999;
 }
