--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,5 +1,9 @@
 .header-container {
+    background-color: grey;
     border: 2px solid red;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 .nav-container {
